--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "Mate academy",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@mate-academy/eslint-config": "0.0.29",
     "@mate-academy/scripts": "^1.8.6",
-    "eslint": "^6.8.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "jest": "^29.7.0",
-    "prettier": "^3.3.2"
+    "prettier": "^2.8.8"
   },
   "mateAcademy": {
     "projectType": "javascript"
